# pydantic-ai

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: after-ci.yml  ci.yml  claude.yml  manually-deploy-docs.yml
clai/: README.md
docs/: a2a.md  ag-ui.md  agents.md  builtin-tools.md  changelog.md  cli.md  deferred-tools.md  dependencies.md  direct.md  evals.md  graph.md  index.md  input.md  install.md  logfire.md  message-history.md  multi-agent-applications.md  openai-api.md  output.md  retries.md  testing.md  thinking.md  third-party-tools.md  tools-advanced.md  tools.md  toolsets.md  version-policy.md
docs-site/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
docs-site/src/: index.ts
docs/api/: durable_exec.md  providers.md  result.md  run.md  toolsets.md
docs/api/ui/: base.md  (+2 more)
docs/durable_execution/: dbos.md  overview.md  prefect.md  temporal.md
docs/evals/: core-concepts.md  quick-start.md
docs/examples/: ag-ui.md  bank-support.md  pydantic-model.md  slack-lead-qualifier.md  sql-gen.md
docs/mcp/: client.md  fastmcp-client.md  overview.md  server.md
docs/models/: anthropic.md  bedrock.md  cohere.md  google.md  openai.md  outlines.md  overview.md
docs/ui/: ag-ui.md  overview.md  vercel-ai.md
examples/pydantic_ai_examples/: bank_support.py  chat_app.py  data_analyst.py  flight_booking.py  openai_api.py  pydantic_model.py  question_graph.py  rag.py  sql_gen.py  stream_markdown.py  weather_agent.py  weather_agent_gradio.py
pydantic_ai_slim/: pyproject.toml
pydantic_ai_slim/pydantic_ai/: __init__.py  _agent_graph.py  _cli.py  _json_schema.py  _output.py  _parts_manager.py  _run_context.py  _tool_manager.py  _utils.py  ag_ui.py  builtin_tools.py  direct.py  exceptions.py  format_prompt.py  mcp.py  messages.py  openai_api.py  output.py  result.py  run.py  tools.py  usage.py
pydantic_ai_slim/pydantic_ai/agent/: __init__.py  abstract.py  wrapper.py
pydantic_ai_slim/pydantic_ai/common_tools/: duckduckgo.py  tavily.py
pydantic_ai_slim/pydantic_ai/durable_exec/dbos/: _agent.py  _mcp_server.py  _model.py
pydantic_ai_slim/pydantic_ai/durable_exec/prefect/: _agent.py  _cache_policies.py  _model.py
pydantic_ai_slim/pydantic_ai/durable_exec/temporal/: __init__.py  _agent.py  _function_toolset.py  _mcp_server.py  _model.py  _run_context.py  _toolset.py
pydantic_ai_slim/pydantic_ai/models/: __init__.py  anthropic.py  bedrock.py  cohere.py  fallback.py  function.py  gemini.py  google.py  groq.py  huggingface.py  instrumented.py  mistral.py  openai.py  outlines.py  test.py  wrapper.py
pydantic_ai_slim/pydantic_ai/profiles/: __init__.py  google.py  openai.py
pydantic_ai_slim/pydantic_ai/providers/: __init__.py  anthropic.py  bedrock.py  cerebras.py  cohere.py  deepseek.py  gateway.py  google.py  grok.py  groq.py  huggingface.py  moonshotai.py  ollama.py  openrouter.py  outlines.py
pydantic_ai_slim/pydantic_ai/toolsets/: fastmcp.py  function.py
pydantic_ai_slim/pydantic_ai/ui/: _adapter.py  _event_stream.py
pydantic_ai_slim/pydantic_ai/ui/ag_ui/: _adapter.py  _event_stream.py  app.py
pydantic_ai_slim/pydantic_ai/ui/vercel_ai/: _adapter.py  _event_stream.py  response_types.py
pydantic_evals/pydantic_evals/: dataset.py  generation.py
pydantic_graph/pydantic_graph/: graph.py
tests/: conftest.py  json_body_serializer.py  mcp_server.py  parts_from_messages.py  test_a2a.py  test_ag_ui.py  test_agent.py  test_builtin_tools.py  test_cli.py  test_dbos.py  test_direct.py  test_examples.py  test_exceptions.py  test_fastmcp.py  test_format_as_xml.py  test_function_schema.py  test_history_processor.py  test_live.py  test_logfire.py  test_mcp.py  test_messages.py  test_openai_api.py  test_parts_manager.py  test_prefect.py  test_streaming.py  test_temporal.py  test_thinking_part.py  test_tools.py  test_toolsets.py  test_ui.py  test_usage_limits.py  test_vercel_ai.py  typed_agent.py  typed_deps.py
tests/evals/: test_dataset.py  test_evaluators.py  test_reporting.py  test_utils.py
(+223 files in other folders)
